--- a/cover.xhtml
+++ b/cover.xhtml
@@ -4,7 +4,7 @@
     <title>Title</title>
     <style type="text/css">
     body {
-        background-color: white;
+        background-color: White;
     }
 
     .bookname_han {
@@ -13,6 +13,7 @@
         margin: 10vh 0 0 0;
         text-align: center;
         font-size: 28vw;
+        color: #005555;
     }
     .bookname_pi {
         text-shadow: 0.2em 0.2em 0.15em Grey;
