--- a/电子书制作说明.html
+++ b/电子书制作说明.html
@@ -9,7 +9,7 @@
 此电子书数据来源于 https://github.com/cbeta-git/xml-p5a 中的 N 目录，是CBETA对元亨寺庙版《漢譯南傳大藏經》做的数字化及一些修订工作。
 布施或捐助请直接联系元亨寺或CBETA
 
-相较于 CBETA 版 EPUB 格式电子书，此电子书主要是删除了段落数字编号，以及对同属一部书的分卷做了合并。
+相较于 CBETA 版 EPUB 格式电子书，此电子书主要是删除了段落数字编号，对小部进行了合并
 
 下载电子书请到 https://github.com/cbeta-git/xml-p5a
 </body>
