--- a/电子书制作说明.html
+++ b/电子书制作说明.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h1>电子书制作说明</h1>
-此电子书数据来源于 https://github.com/cbeta-git/xml-p5a 中的 N 目录，是CBETA对元亨寺庙版《漢譯南傳大藏經》做的数字化及一些修订工作。
-布施或捐助请直接联系元亨寺或CBETA
+<p>此电子书数据来源于 <a href = "https://github.com/cbeta-git/xml-p5a">https://github.com/cbeta-git/xml-p5a</a>，xml-p5a 是 CBETA 对元亨寺庙版《漢譯南傳大藏經》做的数字化及一些修订工作。
+布施或捐助请直接联系元亨寺或打开 <a href="https://cbeta.org/donate/">CBETA 赞助页面</a>。</p>
 
-相较于 CBETA 版 EPUB 格式电子书，此电子书主要是删除了段落数字编号，对小部进行了合并
+<p>与 CBETA 版 EPUB 格式电子书不同，此电子书主要是删除了段落数字编号，并对小部进行了合并。</p>
 
-下载电子书请到 https://github.com/cbeta-git/xml-p5a
+<p>下载电子书请到 <a href="https://github.com/meng89/hyncdzj">https://github.com/meng89/hyncdzj</a></p>
 </body>
 </html>
